--- a/Development/index.html
+++ b/Development/index.html
@@ -24,7 +24,7 @@
   <link rel="stylesheet" type="text/css" href="css/style.css"/>
 </head>
 <body>
-  <div class="container-fluid">
+  <div class="container">
     <header class="header">
       <nav class="navbar navbar-default">
         <div class="container-fluid">
@@ -108,9 +108,77 @@
     </section>
     <section class="goods">
       <article class="goods-block">
-        <h3 class="goods-block__header">Ipsum dolor sit amet</h3>
+        <div class="row">
+          <div class="col-lg-6">
+            <h3 class="goods-block__header">Ipsum dolor sit amet</h3>
+            <p class="goods-block__paragraph">Nam accumsan nunc sit amet elementum sollicitudin. Integer vel lacus eget tortor lobortis tincidunt sed eu dolor. Phasellus cursus augue ac pulvinar cursus.</p>
+            <p class="goods-block__paragraph">Quisque ut erat ornare, feugiat turpis a, fringilla felis. Nulla molestie lorem et orci sagittis, et accumsan ex porta.</p>
+            <button class="btn btn-default main-button goods-block__main-button" type="button">Read more</button>
+          </div>
+          <div class="col-lg-6">
+            <aside class="goods-block__image"><img class="goods-block__image" src="images/goods-img2.png" alt="goods-image-2"/></aside>
+          </div>
+        </div>
+      </article>
+      <article class="goods-block">
+        <div class="row">
+          <div class="col-lg-6">
+            <aside class="goods-block__image"><img class="goods-block__image" src="images/goods-img2.png" alt="goods-image-2"/></aside>
+          </div>
+          <div class="col-lg-6">
+            <h3 class="goods-block__header">Ipsum dolor sit amet</h3>
+            <p class="goods-block__paragraph">Nam accumsan nunc sit amet elementum sollicitudin. Integer vel lacus eget tortor lobortis tincidunt sed eu dolor. Phasellus cursus augue ac pulvinar cursus.</p>
+            <p class="goods-block__paragraph">Quisque ut erat ornare, feugiat turpis a, fringilla felis. Nulla molestie lorem et orci sagittis, et accumsan ex porta.</p>
+            <button class="btn btn-default main-button goods-block__main-button goods-block__main-button_blue" type="button">Read more</button>
+          </div>
+        </div>
       </article>
     </section>
+    <section class="links">
+      <div class="row">
+        <div class="col-lg-4">
+          <nav class="links-block">
+            <ul>
+              <li class="links-block__item"><a class="links-block__item-link" href="#">Ad litora torquent</a></li>
+              <li class="links-block__item"><a class="links-block__item-link" href="#">Per conubia</a></li>
+              <li class="links-block__item"><a class="links-block__item-link" href="#">Nostra</a></li>
+              <li class="links-block__item"><a class="links-block__item-link" href="#">Per inceptos</a></li>
+              <li class="links-block__item"><a class="links-block__item-link" href="#">Himenaeos</a></li>
+              <li class="links-block__item"><a class="links-block__item-link" href="#">In consectetur</a></li>
+            </ul>
+          </nav>
+        </div>
+        <div class="col-lg-4">
+          <nav class="links-block">
+            <ul>
+              <li class="links-block__item"><a class="links-block__item-link" href="#">Taciti sociosqu</a></li>
+              <li class="links-block__item"><a class="links-block__item-link" href="#">Ad litora torquent</a></li>
+              <li class="links-block__item"><a class="links-block__item-link" href="#">Per conubia</a></li>
+              <li class="links-block__item"><a class="links-block__item-link" href="#">Himenaeos</a></li>
+              <li class="links-block__item"><a class="links-block__item-link" href="#">In consectetur</a></li>
+              <li class="links-block__item"><a class="links-block__item-link" href="#">Nisi sed blandit</a></li>
+              <li class="links-block__item"><a class="links-block__item-link" href="#">Tincidunt</a></li>
+            </ul>
+          </nav>
+        </div>
+        <div class="col-lg-4">
+          <nav class="links-block">
+            <ul>
+              <li class="links-block__item"><a class="links-block__item-link" href="#">Nostra</a></li>
+              <li class="links-block__item"><a class="links-block__item-link" href="#">Per inceptos</a></li>
+              <li class="links-block__item"><a class="links-block__item-link" href="#">Himenaeos</a></li>
+              <li class="links-block__item"><a class="links-block__item-link" href="#">In consectetur</a></li>
+              <li class="links-block__item"><a class="links-block__item-link" href="#">Nisi sed blandit</a></li>
+              <li class="links-block__item"><a class="links-block__item-link" href="#">Tincidunt</a></li>
+            </ul>
+          </nav>
+        </div>
+      </div>
+    </section>
+    <footer class="footer">
+      <p class="footer__paragraph">
+        Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.<br>Try awsome tool for desgners symu.co</p>
+    </footer>
   </div>
   <!-- jQuery-->
   <script src="components/jquery/jquery.min.js"></script>
