--- a/Development/index.html
+++ b/Development/index.html
@@ -24,162 +24,161 @@
   <link rel="stylesheet" type="text/css" href="css/style.css"/>
 </head>
 <body>
-  <div class="container">
-    <header class="header">
-      <nav class="navbar navbar-default">
-        <div class="container-fluid">
-          <div class="navbar-header">
-            <button class="navbar-toggle collapsed" type="button" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button><a class="navbar-brand header__logo" href="#">
-              <h2 class="header__logo_title">Panakeia</h2>
-              <p class="header__logo_comment">Free PSD template</p></a>
-          </div>
-          <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav">
-              <li><a href="#">Fusce at</a></li>
-              <li><a href="#">Facilisis</a></li>
-              <li><a href="#">Ante donec</a></li>
-              <li><a href="#">Blandit rhoncus</a></li>
-              <li><a href="#">Placerat</a></li>
-            </ul>
-          </div>
+  <div class="container-fluid"></div>
+  <header class="header">
+    <nav class="navbar navbar-default site-navigation">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <button class="navbar-toggle collapsed" type="button" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button><a class="navbar-brand header__logo" href="#">
+            <h2 class="header__logo_title">Panakeia</h2>
+            <p class="header__logo_comment">Free PSD template</p></a>
         </div>
-      </nav>
-    </header>
-    <section class="promo">
-      <h1 class="promo__header">Integer at tortor ut magna</h1>
-      <h2 class="promo__header-bottom">finibus lobortis sed quis tellus.</h2>
-      <div class="row">
-        <div class="col-lg-4">
-          <article class="promo-block"><img class="promo-block__image" src="images/promo-img1.png" alt="promo-image-1"/>
-            <h3 class="promo-block__header">Tincidunt</h3>
-            <p class="promo-block__description">Phasellus arcu justo, ullamcorper non diam sit amet, luctus condimentum metus. Nullam tempus egestas efficitur. Sed quam dolor.</p>
-          </article>
-        </div>
-        <div class="col-lg-4">
-          <article class="promo-block"><img class="promo-block__image" src="images/promo-img2.png" alt="promo-image-2"/>
-            <h3 class="promo-block__header">Duis bibendum</h3>
-            <p class="promo-block__description">Ut arcu arcu, faucibus eu risus blandit, pulvinar viverra justo. Phasellus arcu justo, ullamcorper non diam sit amet, luctus condimentum metus. In hac habitasse platea dictumst.</p>
-          </article>
-        </div>
-        <div class="col-lg-4">
-          <article class="promo-block"><img class="promo-block__image" src="images/promo-img3.png" alt="promo-image-3"/>
-            <h3 class="promo-block__header">Donec ligula</h3>
-            <p class="promo-block__description">Nullam tempus egestas efficitur. Sed quam dolor, vulputate sed mattis et, sodales quis orci. Ut arcu arcu, faucibus eu risus blandit,.</p>
-          </article>
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+          <ul class="nav navbar-nav">
+            <li><a href="#">Fusce at</a></li>
+            <li><a href="#">Facilisis</a></li>
+            <li><a href="#">Ante donec</a></li>
+            <li><a href="#">Blandit rhoncus</a></li>
+            <li><a href="#">Placerat</a></li>
+          </ul>
         </div>
       </div>
-      <button class="btn btn-default main-button promo__main-button" type="button">Read more</button>
-    </section>
-    <section class="news">
-      <h3 class="news__header">Our news</h3>
+    </nav>
+  </header>
+  <section class="promo">
+    <h1 class="promo__header">Integer at tortor ut magna</h1>
+    <h2 class="promo__header-bottom">finibus lobortis sed quis tellus.</h2>
+    <div class="row">
+      <div class="col-lg-4">
+        <article class="promo-block"><img class="promo-block__image" src="images/promo-img1.png" alt="promo-image-1"/>
+          <h3 class="promo-block__header">Tincidunt</h3>
+          <p class="promo-block__description">Phasellus arcu justo, ullamcorper non diam sit amet, luctus condimentum metus. Nullam tempus egestas efficitur. Sed quam dolor.</p>
+        </article>
+      </div>
+      <div class="col-lg-4">
+        <article class="promo-block"><img class="promo-block__image" src="images/promo-img2.png" alt="promo-image-2"/>
+          <h3 class="promo-block__header">Duis bibendum</h3>
+          <p class="promo-block__description">Ut arcu arcu, faucibus eu risus blandit, pulvinar viverra justo. Phasellus arcu justo, ullamcorper non diam sit amet, luctus condimentum metus. In hac habitasse platea dictumst.</p>
+        </article>
+      </div>
+      <div class="col-lg-4">
+        <article class="promo-block"><img class="promo-block__image" src="images/promo-img3.png" alt="promo-image-3"/>
+          <h3 class="promo-block__header">Donec ligula</h3>
+          <p class="promo-block__description">Nullam tempus egestas efficitur. Sed quam dolor, vulputate sed mattis et, sodales quis orci. Ut arcu arcu, faucibus eu risus blandit,.</p>
+        </article>
+      </div>
+    </div>
+    <button class="btn btn-default main-button promo__main-button" type="button">Read more</button>
+  </section>
+  <section class="news">
+    <h3 class="news__header">Our news</h3>
+    <div class="row">
+      <div class="col-lg-4">
+        <article class="news-block"><img class="news-block__image" src="images/news-img1.png" alt="news-image-1"/>
+          <h3 class="news-block__header">Lorem ipsum</h3>
+          <p class="news-block__description">Est a elit scelerisque vestibulum. Donec est sem, lobortis sit amet imperdiet vel, pretium lobortis erat. Nulla vitae hendrerit odio..</p>
+          <button class="btn btn-default main-button news-block__main-button" type="button">Read more</button>
+        </article>
+      </div>
+      <div class="col-lg-4">
+        <article class="news-block"><img class="news-block__image" src="images/news-img2.png" alt="news-image-2"/>
+          <h3 class="news-block__header">Lorem ipsum</h3>
+          <p class="news-block__description">Est a elit scelerisque vestibulum. Donec est sem, lobortis sit amet imperdiet vel, pretium lobortis erat. Nulla vitae hendrerit odio.</p>
+          <button class="btn btn-default main-button news-block__main-button" type="button">Read more</button>
+        </article>
+      </div>
+      <div class="col-lg-4">
+        <article class="news-block"><img class="news-block__image" src="images/news-img3.png" alt="news-image-3"/>
+          <h3 class="news-block__header">Lorem ipsum</h3>
+          <p class="news-block__description">Est a elit scelerisque vestibulum. Donec est sem, lobortis sit amet imperdiet vel, pretium lobortis erat. Nulla vitae hendrerit odio.</p>
+          <button class="btn btn-default main-button news-block__main-button" type="button">Read more</button>
+        </article>
+      </div>
+    </div>
+  </section>
+  <section class="newsletter">
+    <h3 class="newsletter__header">Newsletter</h3>
+    <p class="newsletter__text">Ut arcu arcu, faucibus eu risus blandit, pulvinar viverra justo. Phasellus arcu justo, ullamcorper non diam sit amet, luctus condimentum metus</p>
+    <form class="signup-form" action="" method="post">
+      <div class="input-group">
+        <input class="form-control signup-form__email" type="email" placeholder="email address" aria-describedby="basic-addon2" required="required"/><span class="input-group-btn signup-form__submit">
+          <button class="btn btn-default main-button signup-form__main-button" type="submit">Sign up</button></span>
+      </div>
+    </form>
+  </section>
+  <section class="goods">
+    <article class="goods-block">
       <div class="row">
-        <div class="col-lg-4">
-          <article class="news-block"><img class="news-block__image" src="images/news-img1.png" alt="news-image-1"/>
-            <h3 class="news-block__header">Lorem ipsum</h3>
-            <p class="news-block__description">Est a elit scelerisque vestibulum. Donec est sem, lobortis sit amet imperdiet vel, pretium lobortis erat. Nulla vitae hendrerit odio..</p>
-            <button class="btn btn-default main-button news-block__main-button" type="button">Read more</button>
-          </article>
+        <div class="col-lg-6">
+          <h3 class="goods-block__header">Ipsum dolor sit amet</h3>
+          <p class="goods-block__paragraph">Nam accumsan nunc sit amet elementum sollicitudin. Integer vel lacus eget tortor lobortis tincidunt sed eu dolor. Phasellus cursus augue ac pulvinar cursus.</p>
+          <p class="goods-block__paragraph">Quisque ut erat ornare, feugiat turpis a, fringilla felis. Nulla molestie lorem et orci sagittis, et accumsan ex porta.</p>
+          <button class="btn btn-default main-button goods-block__main-button" type="button">Read more</button>
         </div>
-        <div class="col-lg-4">
-          <article class="news-block"><img class="news-block__image" src="images/news-img2.png" alt="news-image-2"/>
-            <h3 class="news-block__header">Lorem ipsum</h3>
-            <p class="news-block__description">Est a elit scelerisque vestibulum. Donec est sem, lobortis sit amet imperdiet vel, pretium lobortis erat. Nulla vitae hendrerit odio.</p>
-            <button class="btn btn-default main-button news-block__main-button" type="button">Read more</button>
-          </article>
-        </div>
-        <div class="col-lg-4">
-          <article class="news-block"><img class="news-block__image" src="images/news-img3.png" alt="news-image-3"/>
-            <h3 class="news-block__header">Lorem ipsum</h3>
-            <p class="news-block__description">Est a elit scelerisque vestibulum. Donec est sem, lobortis sit amet imperdiet vel, pretium lobortis erat. Nulla vitae hendrerit odio.</p>
-            <button class="btn btn-default main-button news-block__main-button" type="button">Read more</button>
-          </article>
+        <div class="col-lg-6">
+          <aside class="goods-block__image"><img class="goods-block__image" src="images/goods-img2.png" alt="goods-image-2"/></aside>
         </div>
       </div>
-    </section>
-    <section class="newsletter">
-      <h3 class="newsletter__header">Newsletter</h3>
-      <p class="newsletter__text">Ut arcu arcu, faucibus eu risus blandit, pulvinar viverra justo. Phasellus arcu justo, ullamcorper non diam sit amet, luctus condimentum metus</p>
-      <form class="signup-form" action="" method="post">
-        <div class="input-group">
-          <input class="form-control signup-form__email" type="email" placeholder="email address" aria-describedby="basic-addon2" required="required"/><span class="input-group-btn signup-form__submit">
-            <button class="btn btn-default main-button signup-form__main-button" type="submit">Sign up</button></span>
-        </div>
-      </form>
-    </section>
-    <section class="goods">
-      <article class="goods-block">
-        <div class="row">
-          <div class="col-lg-6">
-            <h3 class="goods-block__header">Ipsum dolor sit amet</h3>
-            <p class="goods-block__paragraph">Nam accumsan nunc sit amet elementum sollicitudin. Integer vel lacus eget tortor lobortis tincidunt sed eu dolor. Phasellus cursus augue ac pulvinar cursus.</p>
-            <p class="goods-block__paragraph">Quisque ut erat ornare, feugiat turpis a, fringilla felis. Nulla molestie lorem et orci sagittis, et accumsan ex porta.</p>
-            <button class="btn btn-default main-button goods-block__main-button" type="button">Read more</button>
-          </div>
-          <div class="col-lg-6">
-            <aside class="goods-block__image"><img class="goods-block__image" src="images/goods-img2.png" alt="goods-image-2"/></aside>
-          </div>
-        </div>
-      </article>
-      <article class="goods-block">
-        <div class="row">
-          <div class="col-lg-6">
-            <aside class="goods-block__image"><img class="goods-block__image" src="images/goods-img2.png" alt="goods-image-2"/></aside>
-          </div>
-          <div class="col-lg-6">
-            <h3 class="goods-block__header">Ipsum dolor sit amet</h3>
-            <p class="goods-block__paragraph">Nam accumsan nunc sit amet elementum sollicitudin. Integer vel lacus eget tortor lobortis tincidunt sed eu dolor. Phasellus cursus augue ac pulvinar cursus.</p>
-            <p class="goods-block__paragraph">Quisque ut erat ornare, feugiat turpis a, fringilla felis. Nulla molestie lorem et orci sagittis, et accumsan ex porta.</p>
-            <button class="btn btn-default main-button goods-block__main-button goods-block__main-button_blue" type="button">Read more</button>
-          </div>
-        </div>
-      </article>
-    </section>
-    <section class="links">
+    </article>
+    <article class="goods-block">
       <div class="row">
-        <div class="col-lg-4">
-          <nav class="links-block">
-            <ul>
-              <li class="links-block__item"><a class="links-block__item-link" href="#">Ad litora torquent</a></li>
-              <li class="links-block__item"><a class="links-block__item-link" href="#">Per conubia</a></li>
-              <li class="links-block__item"><a class="links-block__item-link" href="#">Nostra</a></li>
-              <li class="links-block__item"><a class="links-block__item-link" href="#">Per inceptos</a></li>
-              <li class="links-block__item"><a class="links-block__item-link" href="#">Himenaeos</a></li>
-              <li class="links-block__item"><a class="links-block__item-link" href="#">In consectetur</a></li>
-            </ul>
-          </nav>
+        <div class="col-lg-6">
+          <aside class="goods-block__image"><img class="goods-block__image" src="images/goods-img2.png" alt="goods-image-2"/></aside>
         </div>
-        <div class="col-lg-4">
-          <nav class="links-block">
-            <ul>
-              <li class="links-block__item"><a class="links-block__item-link" href="#">Taciti sociosqu</a></li>
-              <li class="links-block__item"><a class="links-block__item-link" href="#">Ad litora torquent</a></li>
-              <li class="links-block__item"><a class="links-block__item-link" href="#">Per conubia</a></li>
-              <li class="links-block__item"><a class="links-block__item-link" href="#">Himenaeos</a></li>
-              <li class="links-block__item"><a class="links-block__item-link" href="#">In consectetur</a></li>
-              <li class="links-block__item"><a class="links-block__item-link" href="#">Nisi sed blandit</a></li>
-              <li class="links-block__item"><a class="links-block__item-link" href="#">Tincidunt</a></li>
-            </ul>
-          </nav>
-        </div>
-        <div class="col-lg-4">
-          <nav class="links-block">
-            <ul>
-              <li class="links-block__item"><a class="links-block__item-link" href="#">Nostra</a></li>
-              <li class="links-block__item"><a class="links-block__item-link" href="#">Per inceptos</a></li>
-              <li class="links-block__item"><a class="links-block__item-link" href="#">Himenaeos</a></li>
-              <li class="links-block__item"><a class="links-block__item-link" href="#">In consectetur</a></li>
-              <li class="links-block__item"><a class="links-block__item-link" href="#">Nisi sed blandit</a></li>
-              <li class="links-block__item"><a class="links-block__item-link" href="#">Tincidunt</a></li>
-            </ul>
-          </nav>
+        <div class="col-lg-6">
+          <h3 class="goods-block__header">Ipsum dolor sit amet</h3>
+          <p class="goods-block__paragraph">Nam accumsan nunc sit amet elementum sollicitudin. Integer vel lacus eget tortor lobortis tincidunt sed eu dolor. Phasellus cursus augue ac pulvinar cursus.</p>
+          <p class="goods-block__paragraph">Quisque ut erat ornare, feugiat turpis a, fringilla felis. Nulla molestie lorem et orci sagittis, et accumsan ex porta.</p>
+          <button class="btn btn-default main-button goods-block__main-button goods-block__main-button_blue" type="button">Read more</button>
         </div>
       </div>
-    </section>
-    <footer class="footer">
-      <p class="footer__paragraph">
-        Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.<br>Try awsome tool for desgners symu.co</p>
-    </footer>
-  </div>
+    </article>
+  </section>
+  <section class="links">
+    <div class="row">
+      <div class="col-lg-4">
+        <nav class="links-block">
+          <ul>
+            <li class="links-block__item"><a class="links-block__item-link" href="#">Ad litora torquent</a></li>
+            <li class="links-block__item"><a class="links-block__item-link" href="#">Per conubia</a></li>
+            <li class="links-block__item"><a class="links-block__item-link" href="#">Nostra</a></li>
+            <li class="links-block__item"><a class="links-block__item-link" href="#">Per inceptos</a></li>
+            <li class="links-block__item"><a class="links-block__item-link" href="#">Himenaeos</a></li>
+            <li class="links-block__item"><a class="links-block__item-link" href="#">In consectetur</a></li>
+          </ul>
+        </nav>
+      </div>
+      <div class="col-lg-4">
+        <nav class="links-block">
+          <ul>
+            <li class="links-block__item"><a class="links-block__item-link" href="#">Taciti sociosqu</a></li>
+            <li class="links-block__item"><a class="links-block__item-link" href="#">Ad litora torquent</a></li>
+            <li class="links-block__item"><a class="links-block__item-link" href="#">Per conubia</a></li>
+            <li class="links-block__item"><a class="links-block__item-link" href="#">Himenaeos</a></li>
+            <li class="links-block__item"><a class="links-block__item-link" href="#">In consectetur</a></li>
+            <li class="links-block__item"><a class="links-block__item-link" href="#">Nisi sed blandit</a></li>
+            <li class="links-block__item"><a class="links-block__item-link" href="#">Tincidunt</a></li>
+          </ul>
+        </nav>
+      </div>
+      <div class="col-lg-4">
+        <nav class="links-block">
+          <ul>
+            <li class="links-block__item"><a class="links-block__item-link" href="#">Nostra</a></li>
+            <li class="links-block__item"><a class="links-block__item-link" href="#">Per inceptos</a></li>
+            <li class="links-block__item"><a class="links-block__item-link" href="#">Himenaeos</a></li>
+            <li class="links-block__item"><a class="links-block__item-link" href="#">In consectetur</a></li>
+            <li class="links-block__item"><a class="links-block__item-link" href="#">Nisi sed blandit</a></li>
+            <li class="links-block__item"><a class="links-block__item-link" href="#">Tincidunt</a></li>
+          </ul>
+        </nav>
+      </div>
+    </div>
+  </section>
+  <footer class="footer">
+    <p class="footer__paragraph">
+      Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.<br>Try awsome tool for desgners symu.co</p>
+  </footer>
   <!-- jQuery-->
   <script src="components/jquery/jquery.min.js"></script>
   <!-- Include all compiled plugins (below), or include individual files as needed-->
