added some responsiveness

--- a/Development/index.html
+++ b/Development/index.html
@@ -27,7 +27,7 @@
     <div class="site-wrapper">
       <header class="header">
         <nav class="navbar navbar-default navbar-fixed-top site-nav">
-          <div class="container-fluid">
+          <div class="container">
             <div class="navbar-header">
               <button class="navbar-toggle collapsed" type="button" data-toggle="collapse" data-target="#bs-main-navbar-collapse" aria-expanded="false"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button><a class="navbar-text site-nav__logo" href="#site-promo">
                 <h2 class="site-nav__title">Panakeia</h2>
@@ -46,23 +46,23 @@
         </nav>
       </header>
       <section class="jumbotron text-center promo" id="site-promo">
-        <div class="container-fluid">
+        <div class="container">
           <h1 class="promo__header">Integer at tortor ut magna</h1>
           <h2 class="promo__header-bottom">finibus lobortis sed quis tellus.</h2>
           <div class="row">
-            <div class="col-lg-4">
+            <div class="col-sm-4">
               <article class="promo-block"><img class="promo-block__image" src="images/promo-img1.png" alt="promo-image-1"/>
                 <h3 class="promo-block__header">Tincidunt</h3>
                 <p class="promo-block__description">Phasellus arcu justo, ullamcorper non diam sit amet, luctus condimentum metus. Nullam tempus egestas efficitur. Sed quam dolor.</p>
               </article>
             </div>
-            <div class="col-lg-4">
+            <div class="col-sm-4">
               <article class="promo-block"><img class="promo-block__image" src="images/promo-img2.png" alt="promo-image-2"/>
                 <h3 class="promo-block__header">Duis bibendum</h3>
                 <p class="promo-block__description">Ut arcu arcu, faucibus eu risus blandit, pulvinar viverra justo. Phasellus arcu justo, ullamcorper non diam sit amet, luctus condimentum metus. In hac habitasse platea dictumst.</p>
               </article>
             </div>
-            <div class="col-lg-4">
+            <div class="col-sm-4">
               <article class="promo-block"><img class="promo-block__image" src="images/promo-img3.png" alt="promo-image-3"/>
                 <h3 class="promo-block__header">Donec ligula</h3>
                 <p class="promo-block__description">Nullam tempus egestas efficitur. Sed quam dolor, vulputate sed mattis et, sodales quis orci. Ut arcu arcu, faucibus eu risus blandit,.</p>
@@ -73,35 +73,35 @@
         </div>
       </section>
       <section class="news" id="site-news">
-        <div class="container-fluid">
+        <div class="container">
           <h3 class="news__header">Our news</h3>
           <div class="row">
-            <div class="col-lg-4">
-              <article class="news-block"><img class="news-block__image" src="images/news-img1.png" alt="news-image-1"/>
+            <article class="col-lg-4 clearfix news-block"><img class="news-block__image" src="images/news-img1.png" alt="news-image-1"/>
+              <section class="news-textblock">
                 <h3 class="news-block__header">Lorem ipsum</h3>
                 <p class="news-block__description">Est a elit scelerisque vestibulum. Donec est sem, lobortis sit amet imperdiet vel, pretium lobortis erat. Nulla vitae hendrerit odio..</p>
                 <button class="btn btn-default main-button news-block__main-button" type="button">Read more</button>
-              </article>
-            </div>
-            <div class="col-lg-4">
-              <article class="news-block"><img class="news-block__image" src="images/news-img2.png" alt="news-image-2"/>
+              </section>
+            </article>
+            <article class="col-lg-4 clearfix news-block"><img class="news-block__image" src="images/news-img2.png" alt="news-image-2"/>
+              <section class="news-textblock">
                 <h3 class="news-block__header">Lorem ipsum</h3>
-                <p class="news-block__description">Est a elit scelerisque vestibulum. Donec est sem, lobortis sit amet imperdiet vel, pretium lobortis erat. Nulla vitae hendrerit odio.</p>
+                <p class="news-block__description">Est a elit scelerisque vestibulum. Donec est sem, lobortis sit amet imperdiet vel, pretium lobortis erat. Nulla vitae hendrerit odio..</p>
                 <button class="btn btn-default main-button news-block__main-button" type="button">Read more</button>
-              </article>
-            </div>
-            <div class="col-lg-4">
-              <article class="news-block"><img class="news-block__image" src="images/news-img3.png" alt="news-image-3"/>
+              </section>
+            </article>
+            <article class="col-lg-4 clearfix news-block"><img class="news-block__image" src="images/news-img3.png" alt="news-image-3"/>
+              <section class="news-textblock">
                 <h3 class="news-block__header">Lorem ipsum</h3>
-                <p class="news-block__description">Est a elit scelerisque vestibulum. Donec est sem, lobortis sit amet imperdiet vel, pretium lobortis erat. Nulla vitae hendrerit odio.</p>
+                <p class="news-block__description">Est a elit scelerisque vestibulum. Donec est sem, lobortis sit amet imperdiet vel, pretium lobortis erat. Nulla vitae hendrerit odio..</p>
                 <button class="btn btn-default main-button news-block__main-button" type="button">Read more</button>
-              </article>
-            </div>
+              </section>
+            </article>
           </div>
         </div>
       </section>
       <section class="text-center newsletter" id="site-newsletter">
-        <div class="container-fluid">
+        <div class="container">
           <div class="col-lg-6 col-lg-offset-3">
             <h3 class="newsletter__header" id="aria-newsletter__header">Newsletter</h3>
             <p class="newsletter__text">Ut arcu arcu, faucibus eu risus blandit, pulvinar viverra justo. Phasellus arcu justo, ullamcorper non diam sit amet, luctus condimentum metus</p>
@@ -115,26 +115,22 @@
         </div>
       </section>
       <section class="goods" id="site-goods">
-        <div class="container-fluid">
+        <div class="container">
           <article class="goods-block">
             <div class="row">
-              <div class="col-lg-6">
+              <div class="col-md-6">
                 <h3 class="goods-block__header">Ipsum dolor sit amet</h3>
                 <p class="goods-block__paragraph">Nam accumsan nunc sit amet elementum sollicitudin. Integer vel lacus eget tortor lobortis tincidunt sed eu dolor. Phasellus cursus augue ac pulvinar cursus.</p>
                 <p class="goods-block__paragraph">Quisque ut erat ornare, feugiat turpis a, fringilla felis. Nulla molestie lorem et orci sagittis, et accumsan ex porta.</p>
                 <button class="btn btn-default main-button goods-block__main-button" type="button">Read more</button>
               </div>
-              <div class="col-lg-6">
-                <aside class="goods-block__image"></aside><img class="goods-block__image" src="images/goods-img2.png" alt="goods-image-2"/>
-              </div>
+              <div class="col-md-6"><img class="goods-block__image" src="images/goods-img2.png" alt="goods-image-2"/></div>
             </div>
           </article>
           <article class="goods-block">
             <div class="row">
-              <div class="col-lg-6">
-                <aside class="goods-block__image"><img class="goods-block__image" src="images/goods-img2.png" alt="goods-image-2"/></aside>
-              </div>
-              <div class="col-lg-6">
+              <div class="col-md-6"><img class="goods-block__image" src="images/goods-img2.png" alt="goods-image-2"/></div>
+              <div class="col-md-6">
                 <h3 class="goods-block__header">Ipsum dolor sit amet</h3>
                 <p class="goods-block__paragraph">Nam accumsan nunc sit amet elementum sollicitudin. Integer vel lacus eget tortor lobortis tincidunt sed eu dolor. Phasellus cursus augue ac pulvinar cursus.</p>
                 <p class="goods-block__paragraph">Quisque ut erat ornare, feugiat turpis a, fringilla felis. Nulla molestie lorem et orci sagittis, et accumsan ex porta.</p>
@@ -145,9 +141,9 @@
         </div>
       </section>
       <section class="links" id="site-links">
-        <div class="container-fluid">
+        <div class="container">
           <div class="row">
-            <div class="col-lg-4">
+            <div class="col-sm-4">
               <nav class="links-block">
                 <ul>
                   <li class="links-block__item"><a class="links-block__item-link" href="#">Ad litora torquent</a></li>
@@ -159,7 +155,7 @@
                 </ul>
               </nav>
             </div>
-            <div class="col-lg-4">
+            <div class="col-sm-4">
               <nav class="links-block">
                 <ul>
                   <li class="links-block__item"><a class="links-block__item-link" href="#">Taciti sociosqu</a></li>
@@ -172,7 +168,7 @@
                 </ul>
               </nav>
             </div>
-            <div class="col-lg-4">
+            <div class="col-sm-4">
               <nav class="links-block">
                 <ul>
                   <li class="links-block__item"><a class="links-block__item-link" href="#">Nostra</a></li>
